anpassungen fuelltexte startpage modal dialog buttons

--- a/html5/index.html
+++ b/html5/index.html
@@ -89,7 +89,8 @@
                                               style = "" >O</span >23!
                                     </h2 >
                                     <br >
-                                    <p >Diese Umfrage dient dazu, Informationen über unsere Besucher zu erfragen. Auf
+                                    <p >Diese Umfrage dient dazu, Informationen über unsere Besucher zu erfragen.</br>
+                                        Auf
                                         dieser Basis nehmen wir eine Bewertung dieser Interessen im Bezug auf
                                         zukünftige <span class = "ostrale" >O</span >strale Biennale Ausstellungen und
                                         deren mögliche Verbesserungen vor. </br>
