anpassungen fuelltexte startpage modal dialog buttons

--- a/html5/index.html
+++ b/html5/index.html
@@ -78,11 +78,11 @@
             <div class="d-flex col end min-vh-100"
                  style="padding-right:10rem;">
                 <div class="rahmen w-100">
-                    <div class="row justify-content-evenly w-100 h-50 top"
-                         style="padding-top: 8rem;padding-bottom: 4rem;">
-                        <div class="rahmen col inline-block rounded-3 shadow-lg"
-                             style="padding: 2rem;border: 4px solid red;background-color: white;opacity: 0.8;">
-                            <div class="row">
+                    <div class = "row justify-content-evenly w-100 h-50 top"
+                         style = "padding-top: 6rem;padding-bottom: 3rem;" >
+                        <div class = "rahmen col inline-block rounded-3 shadow-lg"
+                             style = "padding: 2rem;border: 4px solid red;background-color: white;" >
+                            <div class = "row" >
                                 <div class = "col" >
                                     <h2 class = "bold ms-auto" >Nimm teil an der Umfrage zur Biennale
                                         <span class = "ostrale"
@@ -114,11 +114,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row justify-content-evenly w-100 h-50 bottom"
-                         style="padding-top: 3rem;padding-bottom: 8rem;">
-                        <div class="rahmen col end inline-block rounded-3 shadow-lg"
-                             style="border: 4px solid red;padding: 2rem;background-color:white;opacity: 0.8;">
-                            <div class="row">
+                    <div class = "row justify-content-evenly w-100 h-50 bottom"
+                         style = "padding-top: 3rem;padding-bottom: 6rem;" >
+                        <div class = "rahmen col end inline-block rounded-3 shadow-lg"
+                             style = "border: 4px solid red;padding: 2rem;background-color:white;" >
+                            <div class = "row" >
                                 <div class = "col" >
                                     <h2 class = "bold ms-auto" >Take part in the survey about the biennial <span
                                             class = "ostrale" style = "" >O</span >23!
