modal dialog header buttons ausgeblendet

--- a/html5/index.html
+++ b/html5/index.html
@@ -190,7 +190,7 @@
         <div class="modal-content">
             <div class = "modal-header" >
                 <h5 class = "modal-title d-none" id = "my-modal-title" >Umfrage zur Biennale O23</h5 >
-                <div aria-label = "navigation buttons" class = "btn-group" role = "group" >
+                <div aria-label = "navigation buttons" class = "btn-group" role = "group" style = "display: none;" >
                     <button aria-label = "Zur&uml;ck / Back" class = "btn btn-lg btn_prev" data-bs-previous = "true"
                             data-bs-target = "#my-modal" id = "btn_prev" onclick = "history.back();" >
                         <span aria-hidden = "true" ><i class = "bi bi-arrow-left-square" ></i ></span >
@@ -224,7 +224,7 @@
         <div class = "modal-content" >
             <div class = "modal-header" >
                 <h5 class = "modal-title d-none" id = "my-modal-en-title" >Survey in part of biennal O23</h5 >
-                <div aria-label = "navigation buttons" class = "btn-group" role = "group" >
+                <div aria-label = "navigation buttons" class = "btn-group" role = "group" style = "display: none;" >
                     <button aria-label = "Zur&uml;ck / Back" class = "btn btn-lg btn_prev" data-bs-previous = "true"
                             data-bs-target = "#my-modal" id = "btn_prev_en" onclick = "history.back();" >
                         <span aria-hidden = "true" ><i class = "bi bi-arrow-left-square" ></i ></span >
