modal dialog header fix some mistakes

--- a/html5/index.html
+++ b/html5/index.html
@@ -243,7 +243,7 @@
             <div class = "modal-body" >
                 <div id = "surveyElementEN" style = "/*display: inline-flex;*/" >
                     <survey params = "survey: model" ></survey >
-                    <survey params = "survey.defaultLocale: en" ></survey >
+                    <survey params = "survey.currentLocale: en" ></survey >
                     <survey params = "survey.locale: en" ></survey >
                 </div >
                 <script crossorigin = "anonymous" src = "./js/ostrale23-umfrage-en.js" ></script >
